--- a/app/src/main/res/layout/report_tqc.xml
+++ b/app/src/main/res/layout/report_tqc.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/imageReport"
-        android:layout_width="620dp"
+        android:layout_width="414dp"
         android:layout_height="433dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
@@ -17,39 +17,124 @@
         tools:layout_editor_absoluteX="92dp"
         tools:layout_editor_absoluteY="40dp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="181dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/button"
-        android:layout_marginBottom="198dp"
-        android:background="@color/metricColorRed"
-        android:text="Emergency"
-        android:textAlignment="center"
-        android:textColor="@color/smart_text"
-        android:textSize="30dp"
-        tools:layout_editor_absoluteX="163dp"
-        tools:layout_editor_absoluteY="343dp" />
-
     <Spinner
         android:id="@+id/spinnerAvailIssue"
         android:layout_width="389dp"
-        android:layout_height="81dp"
-        android:layout_alignParentEnd="true"
+        android:layout_height="67dp"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="172dp"
-        android:layout_marginTop="200dp"
-        />
+        android:layout_alignStart="@+id/spinnepriority"
+        android:layout_marginTop="160dp"
+        android:background="@color/black_overlay"/>
 
     <Button
         android:id="@+id/button"
         android:layout_width="156dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="88dp"
-        android:layout_marginEnd="281dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="52dp"
         android:text="Report" />
+
+    <Spinner
+        android:id="@+id/spinnepriority"
+        android:layout_width="389dp"
+        android:layout_height="63dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="124dp"
+        android:layout_marginTop="250dp"
+        android:background="@color/black_overlay"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignTop="@+id/imageReport"
+        android:layout_marginTop="100dp"
+        android:text="Decision suggested" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/spinnepriority"
+        android:layout_centerHorizontal="true"
+        android:text="Priority" />
+
+    <Spinner
+        android:id="@+id/spinnerdefect"
+        android:layout_width="389dp"
+        android:layout_height="64dp"
+        android:layout_alignStart="@+id/spinnerAvailIssue"
+        android:layout_alignTop="@+id/imageReport"
+        android:background="@color/black_overlay"/>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/imageReport"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:text="Defect" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="41dp"
+        android:textSize="30dp"
+        android:text="Workstation:  " />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/textView4"
+        android:layout_marginStart="458dp"
+        android:text="Order: "
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/textWS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView4"
+        android:layout_toEndOf="@+id/textView4"
+        android:text="TextView"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/textOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/textView4"
+        android:layout_marginStart="563dp"
+        android:text="TextView"
+        android:textSize="30dp" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/comment_input"
+        android:layout_centerHorizontal="true"
+        android:text="Comments" />
+
+    <EditText
+        android:id="@+id/comment_input"
+        android:layout_width="389dp"
+        android:layout_height="63dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="124dp"
+        android:layout_marginTop="350dp"
+        android:textSize="20sp" />
 
 </RelativeLayout>
