--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,16 +1,145 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <LinearLayout
+        android:layout_width="1000px"
+        android:layout_height="250px"
+        android:id="@+id/layout1"
+        android:background="#C4C9CD">
+
+        <TextView
+            android:id="@+id/wsLabel"
+            android:layout_width="180dp"
+            android:layout_height="31dp"
+            android:layout_marginTop="110px"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:textSize="25dp"
+            android:text="WORKSTATION:"
+        />
+        <TextView
+            android:id="@+id/textWS"
+            android:layout_width="match_parent"
+            android:layout_height="31dp"
+            android:layout_marginTop="110px"
+            android:textSize="25dp"
+            android:text="TEXTO"
+
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="780dp"
+        android:layout_height="250px"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/layout1"
+        android:background="@color/smart_text"
+        >
+
+        <TextView
+            android:id="@+id/orderLabel"
+            android:layout_width="70dp"
+            android:layout_height="31dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="110px"
+            android:text="Order:"
+            android:textSize="25dp" />
+
+        <TextView
+            android:id="@+id/textOrder"
+            android:layout_width="match_parent"
+            android:layout_height="31dp"
+            android:layout_marginTop="110px"
+            android:text="TEXTO"
+            android:textSize="25dp"
+
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="1000px"
+        android:layout_height="602dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:background="#DFE3E6">
+
+
+        <ImageView
+            android:id="@+id/imageReport"
+            android:layout_width="476dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_camera" />
+    </LinearLayout>
+
     <TextView
-        android:id="@+id/spinerItem"
+        android:id="@+id/defectLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="60dp"
-        tools:layout_editor_absoluteY="46dp"
-        android:textColor="@color/black"
-    />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="189dp"
+        android:text="Defect" />
+
+    <TextView
+        android:id="@+id/decisionLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="273dp"
+        android:text="Decision suggested" />
+
+    <TextView
+        android:id="@+id/priorityLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="Priority" />
+
+    <TextView
+        android:id="@+id/commentsLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="274dp"
+        android:text="Comments" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="390dp"
+        android:layout_height="34dp"
+        android:layout_alignBaseline="@+id/defectLabel"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="132dp" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="393dp"
+        android:layout_height="34dp"
+        android:layout_alignBottom="@+id/decisionLabel"
+        android:layout_alignStart="@+id/spinner"
+        android:layout_marginBottom="-10dp" />
+
+    <Spinner
+        android:id="@+id/spinner3"
+        android:layout_width="395dp"
+        android:layout_height="34dp"
+        android:layout_alignStart="@+id/spinner"
+        android:layout_centerVertical="true" />
+
+    <EditText
+        android:layout_width="391dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/commentsLabel"
+        android:layout_alignStart="@+id/spinner"
+        android:text="" />
+
+
 </RelativeLayout>
+
