--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,145 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="1000px"
-        android:layout_height="250px"
-        android:id="@+id/layout1"
-        android:background="#C4C9CD">
+        android:id="@+id/linear_aux_1"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".3">
 
-        <TextView
-            android:id="@+id/wsLabel"
-            android:layout_width="180dp"
-            android:layout_height="31dp"
-            android:layout_marginTop="110px"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:textSize="25dp"
-            android:text="WORKSTATION:"
-        />
-        <TextView
-            android:id="@+id/textWS"
-            android:layout_width="match_parent"
-            android:layout_height="31dp"
-            android:layout_marginTop="110px"
-            android:textSize="25dp"
-            android:text="TEXTO"
-
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="780dp"
-        android:layout_height="250px"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/layout1"
-        android:background="@color/smart_text"
-        >
-
-        <TextView
-            android:id="@+id/orderLabel"
-            android:layout_width="70dp"
-            android:layout_height="31dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="110px"
-            android:text="Order:"
-            android:textSize="25dp" />
-
-        <TextView
-            android:id="@+id/textOrder"
-            android:layout_width="match_parent"
-            android:layout_height="31dp"
-            android:layout_marginTop="110px"
-            android:text="TEXTO"
-            android:textSize="25dp"
-
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="1000px"
-        android:layout_height="602dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:background="#DFE3E6">
-
-
-        <ImageView
-            android:id="@+id/imageReport"
-            android:layout_width="476dp"
+        <RelativeLayout
+            android:id="@+id/layout1"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_camera" />
+            android:background="#C4C9CD"
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/wsLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="31dp"
+                android:layout_centerInParent="true"
+                android:layout_alignParentStart="true"
+                android:textSize="20sp"
+                android:layout_marginLeft="15dp"
+                android:text="WORKSTATION:"
+                />
+            <TextView
+                android:id="@+id/textWS"
+                android:layout_width="match_parent"
+                android:layout_height="31dp"
+                android:layout_toEndOf="@+id/wsLabel"
+                android:layout_centerInParent="true"
+                android:textSize="20sp"
+                android:text="TEXTO"
+
+                />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/smart_text"
+            >
+
+            <TextView
+                android:id="@+id/orderLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginLeft="15dp"
+                android:text="Order: "
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textOrder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@+id/orderLabel"
+                android:layout_centerInParent="true"
+                android:text="TEXTO"
+                android:textSize="20sp"
+                />
+
+            <ImageView
+                android:id="@+id/tqc_mic"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="40dp"
+                android:src="@drawable/m2" />
+
+        </RelativeLayout>
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/defectLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="189dp"
-        android:text="Defect" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/decisionLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="273dp"
-        android:text="Decision suggested" />
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="#DFE3E6"
+            android:layout_weight="1">
 
-    <TextView
-        android:id="@+id/priorityLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Priority" />
+            <ImageView
+                android:id="@+id/imageReport"
+                android:layout_width="476dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@android:drawable/ic_menu_camera" />
 
-    <TextView
-        android:id="@+id/commentsLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="274dp"
-        android:text="Comments" />
+        </RelativeLayout>
 
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="390dp"
-        android:layout_height="34dp"
-        android:layout_alignBaseline="@+id/defectLabel"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="132dp" />
+        <RelativeLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:background="#DFE3E6"
+            android:layout_weight="2">
 
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="393dp"
-        android:layout_height="34dp"
-        android:layout_alignBottom="@+id/decisionLabel"
-        android:layout_alignStart="@+id/spinner"
-        android:layout_marginBottom="-10dp" />
+            <TextView
+                android:id="@+id/defectLabel"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="75dp"
+                android:layout_marginTop="100dp"
+                android:textSize="15sp"
+                android:text="Defect" />
 
-    <Spinner
-        android:id="@+id/spinner3"
-        android:layout_width="395dp"
-        android:layout_height="34dp"
-        android:layout_alignStart="@+id/spinner"
-        android:layout_centerVertical="true" />
+            <TextView
+                android:id="@+id/decisionLabel"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="75dp"
+                android:layout_marginTop="50dp"
+                android:textSize="15sp"
+                android:text="Decision suggested"
+                android:layout_below="@id/defectLabel"/>
 
-    <EditText
-        android:layout_width="391dp"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/commentsLabel"
-        android:layout_alignStart="@+id/spinner"
-        android:text="" />
+            <TextView
+                android:id="@+id/priorityLabel"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="75dp"
+                android:layout_marginTop="50dp"
+                android:textSize="15sp"
+                android:text="Priority"
+                android:layout_below="@id/decisionLabel"/>
 
+            <TextView
+                android:id="@+id/commentsLabel"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="75dp"
+                android:layout_marginTop="63dp"
+                android:textSize="15sp"
+                android:text="Comments"
+                android:layout_below="@id/priorityLabel"/>
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/spinner_defect"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="100dp"
+                android:textSize="15sp"
+                android:layout_toRightOf="@+id/defectLabel"/>
+
+            <TextView
+                android:id="@+id/spinnerIssues"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:textSize="15sp"
+                android:layout_below="@+id/spinner_defect"
+                android:layout_toRightOf="@+id/decisionLabel"/>
+
+            <TextView
+                android:id="@+id/spinnepriority"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:textSize="15sp"
+                android:layout_below="@+id/spinnerIssues"
+                android:layout_toRightOf="@+id/priorityLabel"/>
+
+            <EditText
+                android:id="@+id/comments"
+                android:layout_width="375dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:text=""
+                android:layout_below="@+id/spinnepriority"
+                android:textSize="15sp"
+                android:layout_toRightOf="@+id/commentsLabel"/>
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="156dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="90dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="250dp"
+                android:onClick="clickReport"
+                android:textSize="15sp"
+                android:layout_below="@+id/commentsLabel"
+                android:text="Report" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
 
