--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -112,7 +112,7 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="75dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="50dp"
                 android:textSize="15sp"
                 android:text="Defect" />
 
@@ -150,7 +150,7 @@
                 android:id="@+id/spinner_defect"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="50dp"
                 android:textSize="15sp"
                 android:layout_toRightOf="@+id/defectLabel"/>
 
@@ -178,6 +178,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:text=""
+                android:focusable="false"
                 android:layout_below="@+id/spinnepriority"
                 android:textSize="15sp"
                 android:layout_toRightOf="@+id/commentsLabel"/>
@@ -186,7 +187,7 @@
                 android:id="@+id/button"
                 android:layout_width="156dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="90dp"
+                android:layout_marginTop="50dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="250dp"
                 android:onClick="clickReport"
