--- a/app/src/main/res/layout/checkmetrics_list.xml
+++ b/app/src/main/res/layout/checkmetrics_list.xml
@@ -6,11 +6,11 @@
     android:orientation="horizontal"
     android:padding="5dip" >
 
-
     <ImageView
         android:id="@+id/checkmetric_list_image"
         android:layout_width="70dip"
         android:layout_height="70dip"
+        android:layout_centerVertical="true"
         android:background="@color/smart_text"
         android:src="@drawable/metrics"/>
 
@@ -19,30 +19,29 @@
         android:layout_toRightOf="@+id/checkmetric_list_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="5dip"
         android:textStyle="bold"
-        android:textSize="25sp"
+        android:textSize="22sp"
         />
 
     <TextView
         android:id="@+id/checkmetric_dscr"
         android:layout_toRightOf="@+id/checkmetric_code"
-        android:layout_width="wrap_content"
+        android:layout_width="500dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dip"
         android:textStyle="bold"
-        android:textSize="25sp"
+        android:textSize="20sp"
         />
-
 
     <Switch
         android:id="@+id/check_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dip"
+        android:layout_marginLeft="20dip"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:textSize="16sp"
+        android:layout_toRightOf="@+id/checkmetric_dscr"
         android:checked="false"
         android:textOff="Passed"
         />
